--- a/orders/static/orders/global.css
+++ b/orders/static/orders/global.css
@@ -1,54 +1,117 @@
 body, html {
-    height: 100%;
-    background-color: #f7f8f9;
-    color: #6b7c93;
+    width: 100%;
+    background-color: #333333;
+    margin:0;
+    padding:0;
+    font-family: 'Roboto',sans-serif;
+    text-transform: none;
 }
 
+.checkoutPage{
+    width:100%;
+    margin:200px auto;
+}
+
+.checkoutPageDivision{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin:0px auto;
+    padding:0px 20px;
+    width:100%;
+}
+
+.leftColumn{
+    background-color: rgba(0, 0, 0, 0.4);
+    width:100%;
+}
+
+.rightColumn{
+    background-color: rgba(0, 0, 0, 0.4);
+    margin:0px 50px 0px 20px;
+    padding:0px 0px 50px 0px;
+    max-height: auto;
+    
+}
+
+.leftColumn h1{
+    color:#cfbb63;
+    font-size:50px;
+    padding:10px 40px;
+    font-weight: 700;
+}
+
+.leftColumn .accordion {
+    background-color: rgba(0, 0, 0, 0.1);
+    color: #cfbb63;
+    cursor: pointer;
+    font-weight: 300;
+    padding: 18px;
+    margin:0px 35px;
+    width: 90%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 30px;
+    transition: 0.4s;
+    font-family: 'Roboto', sans-serif;
+}
+
+.active, .accordion:hover {
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.accordion:after {
+    content: '\002B';
+    color: #cfbb63;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+}
+  
+.active:after {
+    content: "\2212";
+}
+
+.panel {
+    padding: 0 18px;
+    background-color: rgba(0, 0, 0, 0.1);
+    color:#cfbb63;
+    max-height: 0;
+    overflow: hidden;
+    width:85.6%;
+    margin:0px 35px;
+    font-size: 20px;
+    transition: max-height 0.2s ease-out;
+    
+}
+
+.panel label{
+    font-size: 20px;
+    text-align: left;
+    padding:10px 20px;
+}
+
+.panel .addButton{
+    background-color: #cfbb63;
+    border: none;
+    outline: none;
+    font-size:20px;
+    color:rgba(0, 0, 0, 0.6);
+    padding:16px 32px;
+    font-weight: 500;
+    margin:10px 200px;
+}
+
+
 *, label {
-    font-family: "Helvetica Neue", Helvetica, sans-serif;
     font-size: 16px;
     font-variant: normal;
     padding: 0;
-    margin: 0;
     -webkit-font-smoothing: antialiased;
-}
-
-button {
-    border: none;
-    border-radius: 4px;
-    outline: none;
-    text-decoration: none;
-    color: #fff;
-    background: #32325d;
-    white-space: nowrap;
-    display: inline-block;
-    height: 40px;
-    line-height: 40px;
-    padding: 0 14px;
-    box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
-    border-radius: 4px;
-    font-size: 15px;
-    font-weight: 600;
-    letter-spacing: 0.025em;
-    text-decoration: none;
-    -webkit-transition: all 150ms ease;
-    transition: all 150ms ease;
-    float: left;
-    margin-left: 12px;
-    margin-top: 28px;
-}
-
-button:hover {
-    transform: translateY(-1px);
-    box-shadow: 0 7px 14px rgba(50, 50, 93, .10), 0 3px 6px rgba(0, 0, 0, .08);
-    background-color: #43458b;
 }
 
 form {
     padding: 30px;
-    height: 120px;
-    color: gold;
-    background-color: green;
 }
 
 label {
@@ -104,10 +167,31 @@ label {
     transform: translateY(-80px);
 }
 
+
+#scrollTop {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
+
+#scrollTop:hover {
+    background-color: #555;
+}
+
 /**
- * The CSS shown here will not be introduced in the Quickstart guide, but shows
- * how you can use CSS to style your Element's container.
- */
+* The CSS shown here will not be introduced in the Quickstart guide, but shows
+* how you can use CSS to style your Element's container.
+*/
 .StripeElement {
     box-sizing: border-box;
 
@@ -133,5 +217,51 @@ label {
 }
 
 .StripeElement--webkit-autofill {
-    background-color: #fefde5 !important;
+    background-color: #fefde5 !important
+}
+
+.registeredAdd{
+    color:#cfbb63;
+    padding:0 35px;
+}
+
+.registeredAdd h3{
+    font-size: 25px;
+    
+}
+
+
+.rightColumn .summary {
+    color: #cfbb63;
+    background-color: transparent;
+}
+
+.summary h1{
+    font-size: 50px;
+    padding:0px 50px;
+}
+
+
+table {
+    text-align: center;
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 80%;
+    margin:0px 100px;
+    font-size: 20px;
+}
+
+th{
+    border: none;
+    text-align: left;
+    padding: 15px 30px;
+    font-size: 20px;
+    background-color: rgba(0,0,0,0.4);
+}
+
+td{
+    border: none;
+    text-align: left;
+    padding: 25px 30px;
+    font-size: 20px;
 }
