--- a/Raul/templates/Raul/cart.html
+++ b/Raul/templates/Raul/cart.html
@@ -58,9 +58,9 @@
                                                         <div class="product-info">
                                                             <div>Display: <span class="value">studded vase ${{item.product.price}}
                                                                     Metal Vase Bronze 5 H x 5 W</span></div>
-                                                                    
+
                                                             {% for sub_item in item.variation.all%}
-    
+
                                                                 <div> <span class="value">{{sub_item.title}}</span></div>
                                                             {% endfor %}
                                                         </div>
@@ -69,7 +69,7 @@
                                                 <div class="col-md-4 quantity">
                                                     <form class= 'form pull-right' method='POST' action="{% url 'add_to_cart' item.product.slug %}">
                                                         {% csrf_token %}
-                                                        <input name='qty' class= "quantityPlace" type='number' placeholder={{item.quantity}} value='{{item.quantity}}' />
+                                                        <input name='qty' class= "quantityPlace" type='number' min="0" placeholder={{item.quantity}} value='{{item.quantity}}' />
                                                        {% if item.variation.colors %}
 
                                                         {% for sub_item in item.variation.colors%}
@@ -86,7 +86,7 @@
 
 
                                                         <input type='submit' value='update cart' />
-                                                        <a href="{% url 'remove_from_cart' item.id %}"><button class ="removeButton">remove</button></a>
+                                                        <a href="{% url 'remove_from_cart' item.id %}"><img src="{%static 'Raul/Icons/Icons_Small/baseline_delete_outline_white_18dp.png' %}"></a>
                                                     </form>
 
 
@@ -106,7 +106,7 @@
                     <!-- <div class="col-md-12 col-lg-4">
                         <div class="summary">
                             <h3>Summary</h3>
-                            <div class="summary-item"><span class="text">Subtotal</span><span class="price">${{ cart.total}}</span></div>                           
+                            <div class="summary-item"><span class="text">Subtotal</span><span class="price">${{ cart.total}}</span></div>
                             <a type="button" class="btn btn-primary btn-lg btn-block"  href="{% url 'checkout'  %}"> Checkout</a>
                         </div>
                     </div>
@@ -116,10 +116,10 @@
         </div>
     </section>
     <div class="summary">
-        <div class="summary-item"><span class="text">Subtotal:</span><span class="price">${{ cart.total}}</span></div>   
-                               
+        <div class="summary-item"><span class="text">Subtotal:</span><span class="price">${{ cart.total}}</span></div>
+
         <a type="button" class="buttonCheckout"  href="{% url 'checkout'  %}">Checkout</a>
-        
+
     </div>
 </main>
 <button onclick="topFunction()" id="scrollTop"> <img src="{% static 'Raul/Images/arrowDown.png' %}"> </button>
