--- a/Raul/static/Raul/CSS/landingCSS.css
+++ b/Raul/static/Raul/CSS/landingCSS.css
@@ -6,7 +6,7 @@ body{
     overflow: hidden;
     justify-items: center;
     align-items: center;
-    background-color:#333333;
+    background-color: #b2b4aa;
 }
 
 .placeContainers{
