--- a/orders/templates/orders/Confirmed Order.html
+++ b/orders/templates/orders/Confirmed Order.html
@@ -2,14 +2,33 @@
 <html lang="en">
 
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
     body {
         background-color: black;
     }
-    #Order Confirm a{
+    #OrderConfirm {
         color: #cfbb63;
-        font-size:500px
-
+        font-size:100px;
+        text-align: center;
+        font-family: 'Roboto', sans-serif;
+        padding-top: 100px;
+        padding-bottom: 70px;
     }
+    #OrderNumber {
+        color: #cfbb63;
+        font-size:35px;
+        text-align: left;
+        font-family: 'Roboto', sans-serif;
+        padding-bottom: 20px;
+    }
+    #OrderInfo {
+        color: #cfbb63;
+        font-size:35px;
+        text-align: left;
+        font-family: 'Roboto', sans-serif;
+        padding-bottom: 20px;
+    }
+
 
 </style>
 <head>
@@ -17,11 +36,15 @@
     <title>Order Confirmed</title>
 </head>
 <body>
-<div id="Order Confirm">
+<div id="OrderConfirm">
     <a>Order Confirmed</a>
 </div>
 
+<div id="OrderNumber">
+    Your OrderID is {{ order.order_id }}
+</div>
 
+<div id="OrderInfo">
 <h2>  Order Number : {{ order.order_id }}</h2>
 <h2> Shipping to : {{ shipping_address }}</h2>
 <h2> Billing to: {{ billing_address}}</h2>
@@ -31,4 +54,5 @@
 {% endfor %}
 
 </body>
+</div>
 </html>
